--- a/index.html
+++ b/index.html
@@ -26,36 +26,38 @@
         </p>
         <p>You <em>know</em> you want to.</p>
         <form>
-          Let's do this!
-          <div class="form-inputs">
-            <div>
-              <label for="first-name">FIRST NAME</label>
-              <input type="text" id="first-name" name="first-name" required />
-            </div>
-            <div>
-              <label for="last-name">LAST NAME</label>
-              <input type="text" id="last-name" name="last-name" required />
-            </div>
-            <div>
-              <label for="email">EMAIL</label>
-              <input type="email" id="email" name="email" required />
-            </div>
-            <div>
-              <label for="phone">PHONE NUMBER</label>
-              <input type="tel" id="phone" name="phone" required />
-            </div>
-            <div>
-              <label for="password">PASSWORD</label>
-              <input type="password" id="password" name="password" required />
-            </div>
-            <div>
-              <label for="password-2">CONFIRM PASSWORD</label>
-              <input
-                type="password"
-                id="password-2"
-                name="password-2"
-                required
-              />
+          <div class="middle-right">
+            <p>Let's do this!</p>
+            <div class="form-inputs">
+              <div>
+                <label for="first-name">FIRST NAME</label>
+                <input type="text" id="first-name" name="first-name" required />
+              </div>
+              <div>
+                <label for="last-name">LAST NAME</label>
+                <input type="text" id="last-name" name="last-name" required />
+              </div>
+              <div>
+                <label for="email">EMAIL</label>
+                <input type="email" id="email" name="email" required />
+              </div>
+              <div>
+                <label for="phone">PHONE NUMBER</label>
+                <input type="tel" id="phone" name="phone" required />
+              </div>
+              <div>
+                <label for="password">PASSWORD</label>
+                <input type="password" id="password" name="password" required />
+              </div>
+              <div>
+                <label for="password-2">CONFIRM PASSWORD</label>
+                <input
+                  type="password"
+                  id="password-2"
+                  name="password-2"
+                  required
+                />
+              </div>
             </div>
           </div>
           <button type="submit">Create Account</button>
